[package]
name = "tpsecore"
version = "0.1.1"
edition = "2024"
authors = ["UniQMG"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Data utilities
base64 = "0.13.0"
regex = "1.6.0"
serde = "1.0.122"
serde_json = "1.0.45"
serde_with = "1.14.0"
data-url = "0.1.1"
num-traits = "0.2.15"
mime_guess = "2.0.4"
mime = "0.3.16"
sha2 = "0.10.2"
hex = "0.4.3"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] } # bzip + zstd busted for wasm?
itertools = "0.10.3"

# Other utilities
thiserror = "1.0.31"
log = "0.4.17"

# Image
image = { version = "0.24.3", default-features = false, features = ["bmp", "dds", "dxt", "farbfeld", "gif", "hdr", "ico", "jpeg", "png", "pnm", "tga", "tiff", "webp"] } # all of the defaults except openexr, which transiently depends on wasm-bindgen for randomness
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6"
imageproc = "0.23.0"
rusttype = "0.9.2"

# Audio
symphonia = { version = "0.5.1", features = ["mp3", "isomp4", "aac"] } # various decoders
hound = "3.4.0" # wav encoder

[dev-dependencies]
simple_logger = "2.2.0" # for logging in tests

[profile.test]
opt-level = 1

[profile.release]
# opt-level = "s" # small code size
opt-level = 3 # speed
lto = true
