[package]
name = "tpsecore"
version = "0.1.1"
edition = "2024"
authors = ["UniQMG"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Data utilities
base64 = "0.22.1"
regex = "1.6.0"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.45"
serde_with = "3.12.0"
data-url = "0.3.1"
num-traits = "0.2.15"
mime_guess = "2.0.4"
mime = "0.3.16"
sha2 = "0.10.2"
hex = "0.4.3"
hex-literal = "0.4.1"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] } # bzip + zstd busted for wasm?
itertools = "0.14.0"

# Other utilities
thiserror = "2.0.11"
log = "0.4.17"

# Image
image = { version = "0.25.5", default-features = false, features = ["bmp","dds","exr","ff","gif","hdr","ico","jpeg","png","pnm","qoi","tga","tiff","webp"] } # all the defaults except avif, which has a transitive relationship on wasm-bindgen
resvg = "0.44.0"
usvg = "0.44.0"
tiny-skia = "0.11.4"
imageproc = { version = "0.25.0", default-features = false, features = [] }
ab_glyph = "0.2.29"

# Audio
symphonia = { version = "0.5.4", features = ["mp3", "isomp4", "aac"] } # various decoders
hound = "3.5.1" # wav encoder

[dev-dependencies]
simple_logger = "5.0.0" # for logging in tests

[patch.crates-io]
getrandom = { path = "./overrides/getrandom" }

[profile.test]
opt-level = 1

[profile.release]
# opt-level = "s" # small code size
opt-level = 3 # speed
lto = true
